force-app/main/default/objects/LPCR_TemplateSignatureElectronique__c/LPCR_TemplateSignatureElectronique__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Template Signature Electronique</label>
</CustomObject>