force-app/main/default/objects/LPCR_TemplateSignatureElectronique__c/fields/LPCR_IDContactSignataireLPCR__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IDContactSignataireLPCR__c</fullName>
    <label>ID Contact Signataire LPCR</label>
    <length>18</length>
    <type>Text</type>
</CustomField>