force-app/main/default/objects/LPCR_TemplateSignatureElectronique__c/fields/LPCR_IDQueryAnnexe2__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IDQueryAnnexe2__c</fullName>
    <label>ID Query Annexe2</label>
    <length>18</length>
    <type>Text</type>
</CustomField>