force-app/main/default/objects/LPCR_TemplateSignatureElectronique__c/fields/LPCR_IDQueryContactInfo__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IDQueryContactInfo__c</fullName>
    <label>ID Query ContactInfo</label>
    <length>18</length>
    <type>Text</type>
</CustomField>