force-app/main/default/objects/LPCR_TemplateSignatureElectronique__c/fields/LPCR_IDQueryGetListPriceIDFetGV__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IDQueryGetListPriceIDFetGV__c</fullName>
    <label>ID Query Get List Price IDF et GV</label>
    <length>18</length>
    <type>Text</type>
</CustomField>