force-app/main/default/objects/LPCR_TemplateSignatureElectronique__c/fields/LPCR_IDQueryGetListPriceParis__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IDQueryGetListPriceParis__c</fullName>
    <label>ID Query Get List Price Paris</label>
    <length>18</length>
    <type>Text</type>
</CustomField>