force-app/main/default/objects/LPCR_TemplateSignatureElectronique__c/fields/LPCR_IDQueryGetListPriceProvince__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IDQueryGetListPriceProvince__c</fullName>
    <label>ID Query Get List Price Province</label>
    <length>18</length>
    <type>Text</type>
</CustomField>