force-app/main/default/objects/LPCR_TemplateSignatureElectronique__c/fields/LPCR_IDQueryInfosContratAccueil__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IDQueryInfosContratAccueil__c</fullName>
    <label>ID Query InfosContratAccueil</label>
    <length>18</length>
    <type>Text</type>
</CustomField>