force-app/main/default/objects/LPCR_TemplateSignatureElectronique__c/fields/LPCR_IDQueryLignesBonsdecommande__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IDQueryLignesBonsdecommande__c</fullName>
    <label>ID Query Lignes Bons de commande</label>
    <length>18</length>
    <type>Text</type>
</CustomField>