force-app/main/default/objects/LPCR_TemplateSignatureElectronique__c/fields/LPCR_IDQueryListTablePrix__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IDQueryListTablePrix__c</fullName>
    <label>ID Query ListTablePrix</label>
    <length>18</length>
    <type>Text</type>
</CustomField>