force-app/main/default/objects/LPCR_TemplateSignatureElectronique__c/fields/LPCR_IDQueryPlanning__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IDQueryPlanning__c</fullName>
    <label>ID Query Planning</label>
    <length>18</length>
    <type>Text</type>
</CustomField>