force-app/main/default/objects/LPCR_TemplateSignatureElectronique__c/fields/LPCR_IDQueryServicesAnnexes__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IDQueryServicesAnnexes__c</fullName>
    <label>ID Query ServicesAnnexes</label>
    <length>18</length>
    <type>Text</type>
</CustomField>