force-app/main/default/objects/LPCR_TemplateSignatureElectronique__c/fields/LPCR_IDTemplateAnnexe3__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IDTemplateAnnexe3__c</fullName>
    <description>Id du modèle d&apos;accord pour l&apos;annexe 3 du contrat d&apos;accueil MAC</description>
    <label>ID Template Annexe 3</label>
    <length>18</length>
    <type>Text</type>
</CustomField>