force-app/main/default/objects/LPCR_TemplateSignatureElectronique__c/fields/LPCR_IDTemplateBonAchat__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IDTemplateBonAchat__c</fullName>
    <label>ID Template Bon d&#39;achat</label>
    <length>18</length>
    <type>Text</type>
</CustomField>