force-app/main/default/objects/LPCR_TemplateSignatureElectronique__c/fields/LPCR_IDTemplateBonCommande__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IDTemplateBonCommande__c</fullName>
    <description>Id du modèle d&apos;accord pour le bon de commande</description>
    <label>ID Template Bon de commande</label>
    <length>18</length>
    <type>Text</type>
</CustomField>