force-app/main/default/objects/LPCR_TemplateSignatureElectronique__c/fields/LPCR_IDTemplateCongaAnnexe2MICROOccasion__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IDTemplateCongaAnnexe2MICROOccasion__c</fullName>
    <description>Id du template conga pour le document de l&apos;annexe 2 du contrat d&apos;accueil MICRO Occasionnel</description>
    <label>ID Template Conga Annexe 2 MICRO Occasio</label>
    <length>18</length>
    <type>Text</type>
</CustomField>