force-app/main/default/objects/LPCR_TemplateSignatureElectronique__c/fields/LPCR_IDTemplateContratAccueilMAC__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IDTemplateContratAccueilMAC__c</fullName>
    <description>Id du modèle d&apos;accord pour le contrat d&apos;accueil MAC</description>
    <label>ID Template Contrat Accueil MAC</label>
    <length>18</length>
    <type>Text</type>
</CustomField>