force-app/main/default/objects/LPCR_TemplateSignatureElectronique__c/fields/LPCR_IDTemplateContratAccueilMICRO__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IDTemplateContratAccueilMICRO__c</fullName>
    <label>ID Template Contrat Accueil MICRO</label>
    <length>18</length>
    <type>Text</type>
</CustomField>