force-app/main/default/objects/LPCR_TemplateSignatureElectronique__c/fields/LPCR_IDTemplateContratPartenaire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IDTemplateContratPartenaire__c</fullName>
    <label>ID Template Contrat Partenaire</label>
    <length>18</length>
    <type>Text</type>
</CustomField>