force-app/main/default/objects/LPCR_TemplateSignatureElectronique__c/fields/LPCR_IDTemplateContratReferencement__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IDTemplateContratReferencement__c</fullName>
    <label>ID Template Contrat Référencement</label>
    <length>18</length>
    <type>Text</type>
</CustomField>