force-app/main/default/objects/LPCR_TemplateSignatureElectronique__c/fields/LPCR_IDTemplateContratReservation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IDTemplateContratReservation__c</fullName>
    <label>ID Template Contrat Réservation</label>
    <length>18</length>
    <type>Text</type>
</CustomField>